--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
 
   <main id="malla-container">
-    <!-- Aquí se insertan los ramos automáticamente con JavaScript -->
+    <!-- Secciones de año y semestre se insertan dinámicamente -->
   </main>
 
   <script src="script.js"></script>
