--- a/index.html
+++ b/index.html
@@ -2,123 +2,112 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ing. en Informática</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Ing. En Informática</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Ing. en Informática</h1>
-    <div class="progreso-container">
-      <div id="progreso-text">0% Completado</div>
-      <div id="barra-progreso"><div id="progreso"></div></div>
+    <h1>Ing. En Informática</h1>
+    <div class="barra-progreso">
+      <div class="progreso" id="progreso"></div>
     </div>
   </header>
 
-  <main id="malla-container">
-    
+  <main>
     <!-- 1er Año -->
-    <div class="anio">
+    <section class="año">
       <h2>1er Año</h2>
 
-      <div class="semestre">
+      <div class="semestre" data-semestre="Semestre I">
         <h3>Semestre I</h3>
-        <div class="ramos">
-          <div class="ramo" data-nombre="Fundamentos de programación" data-abre="Desarrollo orientado a objetos">Fundamentos de programación</div>
-          <div class="ramo" data-nombre="Introducción al Cloud Computing">Introducción al Cloud Computing</div>
-          <div class="ramo" data-nombre="Bases de innovación" data-abre="Ingeniería de requisitos">Bases de innovación</div>
-          <div class="ramo" data-nombre="Nivelación matemática" data-abre="Matemática aplicada">Nivelación matemática</div>
-          <div class="ramo" data-nombre="Habilidades de comunicación">Habilidades de comunicación</div>
-        </div>
+        <div class="ramo" data-nombre="Fundamentos de Programación" data-requiere="" data-desbloquea="Desarrollo Orientado a Objetos">Fundamentos de Programación</div>
+        <div class="ramo" data-nombre="Introducción al Cloud Computing" data-requiere="" data-desbloquea="">Introducción al Cloud Computing</div>
+        <div class="ramo" data-nombre="Bases de Innovación" data-requiere="" data-desbloquea="Ingeniería de Requisitos">Bases de Innovación</div>
+        <div class="ramo" data-nombre="Nivelación Matemática" data-requiere="" data-desbloquea="Matemática Aplicada">Nivelación Matemática</div>
+        <div class="ramo" data-nombre="Habilidades de Comunicación" data-requiere="" data-desbloquea="">Habilidades de Comunicación</div>
+        <div class="promedio"></div>
       </div>
 
-      <div class="semestre">
+      <div class="semestre" data-semestre="Semestre II">
         <h3>Semestre II</h3>
-        <div class="ramos">
-          <div class="ramo" data-nombre="Desarrollo orientado a objetos" data-requisitos="Fundamentos de programación" data-abre="Desarrollo fullstack I, Desarrollo de aplicaciones móviles, Desarrollo fullstack II">Desarrollo orientado a objetos</div>
-          <div class="ramo" data-nombre="Base de datos aplicada I" data-abre="Base de datos aplicada II">Base de datos aplicada I</div>
-          <div class="ramo" data-nombre="Ingeniería de requisitos" data-requisitos="Bases de innovación" data-abre="Ingeniería de software">Ingeniería de requisitos</div>
-          <div class="ramo" data-nombre="Matemática aplicada" data-requisitos="Nivelación matemática" data-abre="Estadística descriptiva">Matemática aplicada</div>
-          <div class="ramo" data-nombre="Inglés elemental I" data-abre="Inglés elemental II">Inglés elemental I</div>
-          <div class="ramo" data-nombre="Fundamentos de antropología" data-abre="Ética para el trabajo">Fundamentos de antropología</div>
-        </div>
+        <div class="ramo" data-nombre="Desarrollo Orientado a Objetos" data-requiere="Fundamentos de Programación" data-desbloquea="Desarrollo Fullstack I, Desarrollo de Aplicaciones Móviles, Desarrollo Fullstack II">Desarrollo Orientado a Objetos</div>
+        <div class="ramo" data-nombre="Base de Datos Aplicada I" data-requiere="" data-desbloquea="Base de Datos Aplicada II">Base de Datos Aplicada I</div>
+        <div class="ramo" data-nombre="Ingeniería de Requisitos" data-requiere="Bases de Innovación" data-desbloquea="Ingeniería de Software">Ingeniería de Requisitos</div>
+        <div class="ramo" data-nombre="Matemática Aplicada" data-requiere="Nivelación Matemática" data-desbloquea="Estadística Descriptiva">Matemática Aplicada</div>
+        <div class="ramo" data-nombre="Inglés Elemental I" data-requiere="" data-desbloquea="Inglés Elemental II">Inglés Elemental I</div>
+        <div class="ramo" data-nombre="Fundamentos de Antropología" data-requiere="" data-desbloquea="Ética para el Trabajo">Fundamentos de Antropología</div>
+        <div class="promedio"></div>
       </div>
-    </div>
+    </section>
 
     <!-- 2do Año -->
-    <div class="anio">
+    <section class="año">
       <h2>2do Año</h2>
 
-      <div class="semestre">
+      <div class="semestre" data-semestre="Semestre III">
         <h3>Semestre III</h3>
-        <div class="ramos">
-          <div class="ramo" data-nombre="Desarrollo fullstack I" data-requisitos="Desarrollo orientado a objetos" data-abre="Desarrollo fullstack II">Desarrollo fullstack I</div>
-          <div class="ramo" data-nombre="Base de datos aplicada II" data-requisitos="Base de datos aplicada I" data-abre="Taller de base de datos">Base de datos aplicada II</div>
-          <div class="ramo" data-nombre="Ingeniería de software" data-requisitos="Ingeniería de requisitos">Ingeniería de software</div>
-          <div class="ramo" data-nombre="Inglés elemental II" data-requisitos="Inglés elemental I" data-abre="Inglés intermedio I">Inglés elemental II</div>
-        </div>
+        <div class="ramo" data-nombre="Desarrollo Fullstack I" data-requiere="Desarrollo Orientado a Objetos" data-desbloquea="Desarrollo Fullstack II">Desarrollo Fullstack I</div>
+        <div class="ramo" data-nombre="Base de Datos Aplicada II" data-requiere="Base de Datos Aplicada I" data-desbloquea="Taller de Base de Datos">Base de Datos Aplicada II</div>
+        <div class="ramo" data-nombre="Ingeniería de Software" data-requiere="Ingeniería de Requisitos" data-desbloquea="">Ingeniería de Software</div>
+        <div class="ramo" data-nombre="Inglés Elemental II" data-requiere="Inglés Elemental I" data-desbloquea="Inglés Intermedio I">Inglés Elemental II</div>
+        <div class="promedio"></div>
       </div>
 
-      <div class="semestre">
+      <div class="semestre" data-semestre="Semestre IV">
         <h3>Semestre IV</h3>
-        <div class="ramos">
-          <div class="ramo" data-nombre="Desarrollo fullstack II" data-requisitos="Desarrollo fullstack I, Desarrollo orientado a objetos" data-abre="Desarrollo fullstack III">Desarrollo fullstack II</div>
-          <div class="ramo" data-nombre="Desarrollo de aplicaciones móviles" data-requisitos="Desarrollo orientado a objetos">Desarrollo de aplicaciones móviles</div>
-          <div class="ramo" data-nombre="Taller de base de datos" data-requisitos="Base de datos aplicada II">Taller de base de datos</div>
-          <div class="ramo" data-nombre="Estadística descriptiva" data-requisitos="Matemática aplicada">Estadística descriptiva</div>
-          <div class="ramo" data-nombre="Inglés intermedio I" data-requisitos="Inglés elemental II">Inglés intermedio I</div>
-          <div class="ramo" data-nombre="Ética para el trabajo" data-requisitos="Fundamentos de antropología" data-abre="Ética profesional">Ética para el trabajo</div>
-        </div>
+        <div class="ramo" data-nombre="Desarrollo Fullstack II" data-requiere="Desarrollo Fullstack I, Desarrollo Orientado a Objetos" data-desbloquea="Desarrollo Fullstack III">Desarrollo Fullstack II</div>
+        <div class="ramo" data-nombre="Desarrollo de Aplicaciones Móviles" data-requiere="Desarrollo Orientado a Objetos" data-desbloquea="">Desarrollo de Aplicaciones Móviles</div>
+        <div class="ramo" data-nombre="Taller de Base de Datos" data-requiere="Base de Datos Aplicada II" data-desbloquea="">Taller de Base de Datos</div>
+        <div class="ramo" data-nombre="Estadística Descriptiva" data-requiere="Matemática Aplicada" data-desbloquea="">Estadística Descriptiva</div>
+        <div class="ramo" data-nombre="Inglés Intermedio I" data-requiere="Inglés Elemental II" data-desbloquea="">Inglés Intermedio I</div>
+        <div class="ramo" data-nombre="Ética para el Trabajo" data-requiere="Fundamentos de Antropología" data-desbloquea="Ética Profesional">Ética para el Trabajo</div>
+        <div class="promedio"></div>
       </div>
-    </div>
+    </section>
 
     <!-- 3er Año -->
-    <div class="anio">
+    <section class="año">
       <h2>3er Año</h2>
 
-      <div class="semestre">
+      <div class="semestre" data-semestre="Semestre V">
         <h3>Semestre V</h3>
-        <div class="ramos">
-          <div class="ramo" data-nombre="Desarrollo fullstack III" data-requisitos="Desarrollo fullstack II" data-abre="Seguridad y calidad en el desarrollo de software">Desarrollo fullstack III</div>
-          <div class="ramo" data-nombre="Introducción a herramientas DevOps">Introducción a herramientas DevOps</div>
-          <div class="ramo" data-nombre="Evaluación de proyectos de software" data-abre="Gestión de proyectos de software">Evaluación de proyectos de software</div>
-        </div>
+        <div class="ramo" data-nombre="Desarrollo Fullstack III" data-requiere="Desarrollo Fullstack II" data-desbloquea="Seguridad y Calidad en el Desarrollo de Software">Desarrollo Fullstack III</div>
+        <div class="ramo" data-nombre="Introducción a Herramientas DevOps" data-requiere="" data-desbloquea="">Introducción a Herramientas DevOps</div>
+        <div class="ramo" data-nombre="Evaluación de Proyectos de Software" data-requiere="" data-desbloquea="Gestión de Proyectos de Software">Evaluación de Proyectos de Software</div>
+        <div class="promedio"></div>
       </div>
 
-      <div class="semestre">
+      <div class="semestre" data-semestre="Semestre VI">
         <h3>Semestre VI</h3>
-        <div class="ramos">
-          <div class="ramo" data-nombre="Desarrollo Cloud Native I" data-abre="Desarrollo Cloud Native II">Desarrollo Cloud Native I</div>
-          <div class="ramo" data-nombre="Seguridad y calidad en el desarrollo de software" data-requisitos="Desarrollo fullstack III">Seguridad y calidad en el desarrollo de software</div>
-          <div class="ramo" data-nombre="Gestión de proyectos de software" data-requisitos="Evaluación de proyectos de software">Gestión de proyectos de software</div>
-        </div>
+        <div class="ramo" data-nombre="Desarrollo Cloud Native I" data-requiere="" data-desbloquea="Desarrollo Cloud Native II">Desarrollo Cloud Native I</div>
+        <div class="ramo" data-nombre="Seguridad y Calidad en el Desarrollo de Software" data-requiere="Desarrollo Fullstack III" data-desbloquea="">Seguridad y Calidad en el Desarrollo de Software</div>
+        <div class="ramo" data-nombre="Gestión de Proyectos de Software" data-requiere="Evaluación de Proyectos de Software" data-desbloquea="">Gestión de Proyectos de Software</div>
+        <div class="promedio"></div>
       </div>
-    </div>
+    </section>
 
     <!-- 4to Año -->
-    <div class="anio">
+    <section class="año">
       <h2>4to Año</h2>
 
-      <div class="semestre">
+      <div class="semestre" data-semestre="Semestre VII">
         <h3>Semestre VII</h3>
-        <div class="ramos">
-          <div class="ramo" data-nombre="Desarrollo Cloud Native II" data-requisitos="Desarrollo Cloud Native I" data-abre="Taller aplicado de software">Desarrollo Cloud Native II</div>
-          <div class="ramo" data-nombre="Arquitecturas TI contemporáneas" data-abre="Taller de tecnologías de vanguardia">Arquitecturas TI contemporáneas</div>
-          <div class="ramo" data-nombre="BPM aplicado">BPM aplicado</div>
-          <div class="ramo" data-nombre="Ética profesional" data-requisitos="Ética para el trabajo">Ética profesional</div>
-        </div>
+        <div class="ramo" data-nombre="Desarrollo Cloud Native II" data-requiere="Desarrollo Cloud Native I" data-desbloquea="Taller Aplicado de Software">Desarrollo Cloud Native II</div>
+        <div class="ramo" data-nombre="Arquitecturas TI Contemporáneas" data-requiere="" data-desbloquea="Taller de Tecnologías de Vanguardia">Arquitecturas TI Contemporáneas</div>
+        <div class="ramo" data-nombre="BPM Aplicado" data-requiere="" data-desbloquea="">BPM Aplicado</div>
+        <div class="ramo" data-nombre="Ética Profesional" data-requiere="Ética para el Trabajo" data-desbloquea="">Ética Profesional</div>
+        <div class="promedio"></div>
       </div>
 
-      <div class="semestre">
+      <div class="semestre" data-semestre="Semestre VIII">
         <h3>Semestre VIII</h3>
-        <div class="ramos">
-          <div class="ramo" data-nombre="Taller de tecnologías de vanguardia" data-requisitos="Arquitecturas TI contemporáneas">Taller de tecnologías de vanguardia</div>
-          <div class="ramo" data-nombre="Taller aplicado de software" data-requisitos="Desarrollo Cloud Native II">Taller aplicado de software</div>
-          <div class="ramo" data-nombre="Práctica profesional" data-requisitos="DEL SEMESTRE 1 al 7 aprobados">Práctica profesional</div>
-        </div>
+        <div class="ramo" data-nombre="Taller de Tecnologías de Vanguardia" data-requiere="Arquitecturas TI Contemporáneas" data-desbloquea="">Taller de Tecnologías de Vanguardia</div>
+        <div class="ramo" data-nombre="Taller Aplicado de Software" data-requiere="Desarrollo Cloud Native II" data-desbloquea="">Taller Aplicado de Software</div>
+        <div class="ramo" data-nombre="Práctica Profesional" data-requiere="TODOS SEMESTRES APROBADOS" data-desbloquea="">Práctica Profesional</div>
+        <div class="promedio"></div>
       </div>
-    </div>
-
+    </section>
   </main>
 
   <script src="script.js"></script>
