--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       <div class="progreso" id="progreso"></div>
     </div>
   </header>
+<div style="text-align: center; margin-top: 20px;">
+  <button onclick="reiniciarMalla()" style="background-color: #567CBD; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer;">
+    Reiniciar Malla
+  </button>
+</div>
 
   <main>
     <!-- 1er Año -->
